bougé page animation

--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Adrian Sevilla | Info+Contact</title>
-				<link rel="stylesheet" href="style.css">
+				<link rel="stylesheet" href="/css/style.css">
 	</head>
 	<body>
 	<h1><span><a href="index.html">Adrian Sevilla</a> | </span> Info+Contact</h1>
@@ -22,7 +22,7 @@
 	<a href="index.html"><h2>Page Principal</h2></a>
 	<a href="photo.html"><h2>Photo</h2></a>
 	<a href="video.html"><h2>Video</h2></a>
-	<a href="animation.html"><h2>Animation</h2></a>
+	<a href="/projets/animation.html"><h2>Animation</h2></a>
 	<a href="son.html"><h2>Son</h2></a>
 	</body>
 </html>
