--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Adrian Sevilla | Video</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="/css/style.css">
 	</head>
 	<body>
 	<h1><span><a href="index.html">Adrian Sevilla</a> | </span> Video</h1>
@@ -27,7 +27,7 @@
 		<li><a href="index.html"><h2>Page Principal</h2></a></li>
 		<li><a href="index1.html"><h2>MouvementClicks</h2></a></li>
 		<li><a href="photo.html"><h2>Photo</h2></a></li>
-		<li><a href="animation.html"><h2>Animation</h2></a></li>
+		<li><a href="/projets/animation.html"><h2>Animation</h2></a></li>
 		<li><a href="son.html"><h2>Son</h2></a></li>
 		<li><a href="info.html"><h2>Info+Contact</h2></a></li>
 
