--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Adrian Sevilla | Photos</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="css/lightbox.min.css">
 </head>
 
@@ -47,7 +47,7 @@
 	<a href="video.html">
 		<h2>Video</h2>
 	</a>
-	<a href="animation.html">
+	<a href="/projets/animation.html">
 		<h2>Animation</h2>
 	</a>
 	<a href="son.html">
