--- a/son.html
+++ b/son.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Adrian Sevilla | Son</title>
-				<link rel="stylesheet" href="style.css">
+				<link rel="stylesheet" href="/css/style.css">
 	</head>
 	<body>
 	<h1><span><a href="index.html">Adrian Sevilla</a> | </span> Son</h1>
@@ -18,7 +18,7 @@
 	<a href="index.html"><h2>Page Principal</h2></a>
 	<a href="photo.html"><h2>Photo</h2></a>
 	<a href="video.html"><h2>Video</h2></a>
-	<a href="animation.html"><h2>Animation</h2></a>
+	<a href="/projets/animation.html"><h2>Animation</h2></a>
 	<a href="info.html"><h2>Info+Contact</h2></a>
 
 
