--- a/projets/animation.html
+++ b/projets/animation.html
@@ -4,18 +4,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>Adrian Sevilla | Animation</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-	<h1><span><a href="index.html">Adrian Sevilla</a> | </span> Animation</h1>
+	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Animation</h1>
 	<hr size="3" color="#000000">
-	<h2>Humans, Coniçu, Animé et Sonorisé par: Adrian Sevilla </h2>
+	<h2>Humans, Coinçu, Animé et Sonorisé par: Adrian Sevilla </h2>
 	<video width="640" height="480" controls>
-		<source src="/port/human.mp4" type="video/mp4">
+		<source src="../port/human.mp4" type="video/mp4">
 	</video>
 	<hr size="1" color="#000000">
-	<a href="index.html">
+	<a href="../index.html">
 		<h2>Page Principal</h2>
 	</a>
 	<a href="photo.html">
@@ -27,7 +27,7 @@
 	<a href="son.html">
 		<h2>Son</h2>
 	</a>
-	<a href="info.html">
+	<a href="../info.html">
 		<h2>Info+Contact</h2>
 	</a>
 
