--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<a href="/projets/animation.html">
 		<h2>Animation</h2>
 	</a>
-	<a href="index1.html">
+	<a href="/clicks/clicks.html">
 		<h2>MouvementClicks</h2>
 	</a>
 	<a href="son.html">
