--- a/info.html
+++ b/info.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-	<head>
-		<meta charset="utf-8">
-		<title>Adrian Sevilla | Info+Contact</title>
-				<link rel="stylesheet" href="/css/style.css">
-	</head>
-	<body>
+
+<head>
+	<meta charset="utf-8">
+	<title>Adrian Sevilla | Info+Contact</title>
+	<link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
 	<h1><span><a href="index.html">Adrian Sevilla</a> | </span> Info+Contact</h1>
 	<hr size="3" color="#000000">
 
 
-			<img src="cv.pdf" style="width:40%" align="top">
+	<img src="cv.pdf" style="width:40%" align="top">
 
-	
-			<img src="fot.jpg" style="width:20%" align="top">
+
+	<img src="/images/fot.jpg" style="width:20%" align="top">
 
 
 
 	<hr size="1" color="#000000">
 
-	<a href="index.html"><h2>Page Principal</h2></a>
-	<a href="photo.html"><h2>Photo</h2></a>
-	<a href="video.html"><h2>Video</h2></a>
-	<a href="/projets/animation.html"><h2>Animation</h2></a>
-	<a href="son.html"><h2>Son</h2></a>
-	</body>
+	<a href="index.html">
+		<h2>Page Principal</h2>
+	</a>
+	<a href="/projets/photo.html">
+		<h2>Photo</h2>
+	</a>
+	<a href="/projets/video.html">
+		<h2>Video</h2>
+	</a>
+	<a href="/projets/animation.html">
+		<h2>Animation</h2>
+	</a>
+	<a href="/projets/son.html">
+		<h2>Son</h2>
+	</a>
+</body>
+
 </html>
