--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Adrian Sevilla</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" type="image/x-icon" href="icon.JPG">
 </head>
 
@@ -13,20 +13,20 @@
 	<!--solo una vez, los demas infinito-->
 	<hr size="3" color="#000000">
 	<!--se cierra sola-->
-	<a href="photo.html">
+	<a href="projets/photo.html">
 		<h2>Photo</h2>
 	</a>
 	<!--</br> space avec la prochaine ligne-->
-	<a href="video.html">
+	<a href="projets/video.html">
 		<h2>Video</h2>
 	</a>
-	<a href="/projets/animation.html">
+	<a href="projets/animation.html">
 		<h2>Animation</h2>
 	</a>
-	<a href="/clicks/clicks.html">
+	<a href="clicks/clicks.html">
 		<h2>MouvementClicks</h2>
 	</a>
-	<a href="son.html">
+	<a href="projets/son.html">
 		<h2>Son</h2>
 	</a>
 	<a href="info.html">
