--- a/projets/animation.html
+++ b/projets/animation.html
@@ -11,7 +11,7 @@
 	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Animation</h1>
 	<hr size="3" color="#000000">
 	<h2>Humans, Coinçu, Animé et Sonorisé par: Adrian Sevilla </h2>
-	<video width="640" height="480" controls>
+	<video class="center" controls>
 		<source src="../port/human.mp4" type="video/mp4">
 	</video>
 	<hr size="1" color="#000000">
