--- a/projets/son.html
+++ b/projets/son.html
@@ -11,9 +11,9 @@
 	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Son</h1>
 	<hr size="3" color="#000000">
 	<h2>CaféNegro, Composé et produit par: Adrian Sevilla </h2>
-	<img src="cafe.JPG" style="width:5%">
+	<img src="../images/cafe.JPG" style="width:5%">
 	<audio controls>
-		<source src="../images/cafenegro.m4a" type="audio/mpeg">
+		<source src="../cafenegro.m4a" type="audio/mpeg">
 	</audio>
 	<hr size="1" color="#000000">
 
