--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Adrian Sevilla | Info+Contact</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -12,10 +12,10 @@
 	<hr size="3" color="#000000">
 
 
-	<img src="cv.pdf" style="width:40%" align="top">
+	<img src="images/cv.pdf" style="width:40%" align="top">
 
 
-	<img src="/images/fot.jpg" style="width:20%" align="top">
+	<img src="images/fot.jpg" style="width:20%" align="top">
 
 
 
@@ -24,16 +24,16 @@
 	<a href="index.html">
 		<h2>Page Principal</h2>
 	</a>
-	<a href="/projets/photo.html">
+	<a href="projets/photo.html">
 		<h2>Photo</h2>
 	</a>
-	<a href="/projets/video.html">
+	<a href="projets/video.html">
 		<h2>Video</h2>
 	</a>
-	<a href="/projets/animation.html">
+	<a href="projets/animation.html">
 		<h2>Animation</h2>
 	</a>
-	<a href="/projets/son.html">
+	<a href="projets/son.html">
 		<h2>Son</h2>
 	</a>
 </body>
