--- a/projets/photo.html
+++ b/projets/photo.html
@@ -11,33 +11,33 @@
 <body>
 	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Photo</h1>
 	<hr size="3" color="#000000">
-	<div class="center">
 
-		<a class="example-image-link" href="images/mar.png" data-lightbox="example-set" data-title="rêves aqueux-liquid dreams">
-			<img class="example-image" src="images/mar.png" alt="" />
-		</a>
 
-		<a class="example-image-link" href="images/hojas.jpg" data-lightbox="example-set" data-title="Concrete Jungles">
-			<img class="example-image" src="images/hojas.jpg" alt="" />
-		</a>
+	<a class="example-image-link" href="../images/mar.png" data-lightbox="example-set" data-title="rêves aqueux-liquid dreams">
+		<img class="example-image" src="../images/mar.png" alt="" />
+	</a>
 
-		<a class="example-image-link" href="images/petalos.jpg" data-lightbox="example-set" data-title="Floating Boats">
-			<img class="example-image" src="images/petalos.jpg" alt="" />
-		</a>
+	<a class="example-image-link" href="../images/hojas.jpg" data-lightbox="example-set" data-title="Concrete Jungles">
+		<img class="example-image" src="../images/hojas.jpg" alt="" />
+	</a>
 
-		<a class="example-image-link" href="images/galaxia.jpg" data-lightbox="example-set" data-title="Lumiere prêt">
-			<img class="example-image" src="images/galaxia.jpg" alt="" />
-		</a>
+	<a class="example-image-link" href="../images/petalos.jpg" data-lightbox="example-set" data-title="Floating Boats">
+		<img class="example-image" src="../images/petalos.jpg" alt="" />
+	</a>
 
-		<a class="example-image-link" href="images/neblina.jpg" data-lightbox="example-set" data-title="Temporary Houz">
-			<img class="example-image" src="images/neblina.jpg" alt="" />
-		</a>
-		<a class="example-image-link" href="images/mon.jpg" data-lightbox="example-set" data-title="Famille">
-			<img class="example-image" src="images/mon.jpg" alt="" />
-		</a>
-		<a class="example-image-link" href="images/light.png" data-lightbox="example-set" data-title="Light">
-			<img class="example-image" src="images/light.png" alt="" />
-		</a>
+	<a class="example-image-link" href="../images/galaxia.jpg" data-lightbox="example-set" data-title="Lumiere prêt">
+		<img class="example-image" src="../images/galaxia.jpg" alt="" />
+	</a>
+
+	<a class="example-image-link" href="../images/neblina.jpg" data-lightbox="example-set" data-title="Temporary Houz">
+		<img class="example-image" src="../images/neblina.jpg" alt="" />
+	</a>
+	<a class="example-image-link" href="../images/mon.jpg" data-lightbox="example-set" data-title="Famille">
+		<img class="example-image" src="../images/mon.jpg" alt="" />
+	</a>
+	<a class="example-image-link" href="../images/light.png" data-lightbox="example-set" data-title="Light">
+		<img class="example-image" src="../images/light.png" alt="" />
+	</a>
 	</div>
 
 	<hr size="1" color="#000000">
