--- a/projets/video.html
+++ b/projets/video.html
@@ -8,50 +8,46 @@
 </head>
 
 <body>
-	<h1><span><a href="index.html">Adrian Sevilla</a> | </span> Video</h1>
+	<h1>
+		<span>
+			<a href="../index.html">Adrian Sevilla</a> |
+		</span> Video
+	</h1>
 	<hr size="3" color="#000000">
-	<h1> Racines_Roots_Raices_Wurzeln
-		<video class="center" border="10px" width="40%" height="auto" controls>
-			<source src="../port/vosque.mp4" type="video/mp4">
-		</video>
-		<h1> Cycles_Cycles_Ciclos_Zyklus
-			<video class="center" border="10px" width="40%" height="auto" controls>
-				<source src="../port/pole.mp4" type="video/mp4">
-			</video>
-			<h1> Philosophal_Philosofal_Filosofal_
-				<video class="center" width="40%" height="auto" controls>
-					<source src="../port/filosofal.mp4" type="video/mp4">
-				</video>
+	<h2> Racines_Roots_Raices_Wurzeln</h2>
+	<video class="center" controls>
+		<source src="../port/vosque.mp4" type="video/mp4">
+	</video>
+	<h2> Cycles_Cycles_Ciclos_Zyklus</h2>
+	<video class="center" controls>
+		<source src="../port/pole.mp4" type="video/mp4">
+	</video>
+	<h2> Philosophal_Philosofal_Filosofal_</h2>
+	<video class="center" controls>
+		<source src="../port/filosofal.mp4" type="video/mp4">
+	</video>
 
-				<hr size="1" color="#000000">
+	<hr size="1" color="#000000">
 
-				<ul>
-					<li><a href="../index.html">
-							<h2>Page Principal</h2>
-						</a></li>
-					<li><a href="index1.html">
-							<h2>MouvementClicks</h2>
-						</a></li>
-					<li><a href="photo.html">
-							<h2>Photo</h2>
-						</a></li>
-					<li><a href="animation.html">
-							<h2>Animation</h2>
-						</a></li>
-					<li><a href="son.html">
-							<h2>Son</h2>
-						</a></li>
-					<li><a href="../info.html">
-							<h2>Info+Contact</h2>
-						</a></li>
-
-				</ul>
-
-
-
-
-
-
+	<ul>
+		<li><a href="../index.html">
+				<h2>Page Principal</h2>
+			</a></li>
+		<li><a href="../clicks.html">
+				<h2>MouvementClicks</h2>
+			</a></li>
+		<li><a href="photo.html">
+				<h2>Photo</h2>
+			</a></li>
+		<li><a href="animation.html">
+			</a></li>
+		<li><a href="son.html">
+				<h2>Son</h2>
+			</a></li>
+		<li><a href="../info.html">
+				<h2>Info+Contact</h2>
+			</a></li>
+	</ul>
 
 </body>
 
