--- a/clicks/exister.html
+++ b/clicks/exister.html
@@ -6,8 +6,8 @@
 	<title>Genèse</title>
 	<style>
 		body {
-			background-image: url("/imagesclicks/serpiente.jpg");
-			background-image: url("/imagesclicks/choix.png");
+			background-image: url("imagesclicks/serpiente.jpg");
+			background-image: url("imagesclicks/choix.png");
 			background-repeat: no-repeat;
 			background-size: 90%;
 		}
@@ -40,7 +40,7 @@
 				border-radius: 17px;
 				font-size: 3em;">
 				Sortir</button></a>
-		<img src="white.jpg">
+		<img src="imagesclicks/white.jpg">
 </body>
 
 </html>
