--- a/clicks/nop.html
+++ b/clicks/nop.html
@@ -6,7 +6,7 @@
 	<title>Genèse</title>
 	<style>
 		body {
-			background-image: url("/imagesclicks/nopain.png");
+			background-image: url("imagesclicks/nopain.png");
 			background-repeat: no-repeat;
 			background-size: 90%;
 
