--- a/clicks/porte.html
+++ b/clicks/porte.html
@@ -6,7 +6,7 @@
 	<title>Genèse</title>
 	<style>
 		body {
-			background-image: url("/imagesclicks/porte.png");
+			background-image: url("imagesclicks/porte.png");
 			background-repeat: no-repeat;
 			background-size: 90%;
 			opacity: 0.7;
