--- a/clicks/savoir.html
+++ b/clicks/savoir.html
@@ -6,7 +6,7 @@
 	<title>Genèse</title>
 	<style>
 		body {
-			background-image: url("/imagesclicks/point.png");
+			background-image: url("imagesclicks/point.png");
 			background-repeat: no-repeat;
 			background-size: 100%;
 		}
@@ -24,7 +24,7 @@
 				border-radius: 10px;">
 			Sortir</button></a>
 	<h1 style="font-family: arial; color: hotpink; font-size:9em; text-decoration: overline; text-decoration-style: dashed;">Les cycles infinis t'invitent à accepter leur nature, laquelle est aussi ta propre nature, gardé par des silhouettes autant
-		effrayant que attrayant. Tu fais confiance?
+		effrayantes que attrayantes. Tu fais confiance?
 </body>
 
 </html>
