--- a/clicks/dedans.html
+++ b/clicks/dedans.html
@@ -6,7 +6,7 @@
 	<title>Genèse</title>
 	<style>
 		body {
-			background-image: url("/imagesclicks/dedans.png");
+			background-image: url("imagesclicks/dedans.png");
 			background-repeat: no-repeat;
 			background-size: 100%;
 		}
