--- a/projets/video.html
+++ b/projets/video.html
@@ -33,7 +33,7 @@
 		<li><a href="../index.html">
 				<h2>Page Principal</h2>
 			</a></li>
-		<li><a href="../clicks.html">
+		<li><a href="../clicks/clicks.html">
 				<h2>MouvementClicks</h2>
 			</a></li>
 		<li><a href="photo.html">
