changement menus, typos, premiers pages
<!-->

--- a/index.html
+++ b/index.html
@@ -6,51 +6,36 @@
 	<title>Adrian Sevilla</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" type="image/x-icon" href="icon.JPG">
+	<link href="https://fonts.googleapis.com/css?family=Rokkitt&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
 	<h1>Adrian Sevilla</h1>
 	<!--solo una vez, los demas infinito-->
 	<hr size="3" color="#000000">
 	<!--se cierra sola-->
 	<a href="projets/photo.html">
-		<h2>Photo</h2>
+		<h2 style="display:inline;">Photo</h2>
 	</a>
 	<!--</br> space avec la prochaine ligne-->
 	<a href="projets/video.html">
-		<h2>Video</h2>
+		<h2 style="display:inline;">Video</h2>
 	</a>
 	<a href="projets/animation.html">
-		<h2>Animation</h2>
+		<h2 style="display:inline;">Animation</h2>
 	</a>
 	<a href="clicks/clicks.html">
-		<h2>MouvementClicks</h2>
+		<h2 style="display:inline;">MouvementClicks</h2>
 	</a>
 	<a href="projets/son.html">
-		<h2>Son</h2>
+		<h2 style="display:inline;">Son</h2>
 	</a>
 	<a href="info.html">
-		<h2>Info+Contact</h2>
+		<h2 style="display:inline;">Info+Contact</h2>
 	</a>
-	<!-- <target="_blank" href=...etc hace que el sitio se abra en otra pagina y que no cierre la presente-->
-	<p>
-		</br>
-		<i>
-			<blockquote>
-				<b>
-					After the sun disappeared,
-					the cold dark rain sated thirst,
-					and we arose into the night.
-					<!--cuando el sol se puso,
-		la lluvia mojo mis hojas,
-		y crecí-->
-				</b>
-		</i>
-		</br>
-		<strong><cite>Adrian Sevilla</cite></strong></blockquote>
-		<!--strong, facilita la busqueda web y hace italica. cite, hace un italic para el creador de una frase. i, italic. blockquote, hace referencia a citas moviendo hacia la izq los textos. b, es bold. span, para agregar estilo.-->
-	</p>
-	<a href=""></a>
+	<hr size="2" color="#000000">
+
 </body>
 
 </html>
