--- a/projets/photo.html
+++ b/projets/photo.html
@@ -6,12 +6,27 @@
 	<title>Adrian Sevilla | Photos</title>
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="css/lightbox.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Rokkitt&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Photo</h1>
+	<a href="../index.html">
+		<h2 style="display:inline;">Main</h2>
+	</a>
+	<a href="video.html">
+		<h2 style="display:inline;">Video</h2>
+	</a>
+	<a href="animation.html">
+		<h2 style="display:inline;">Animation</h2>
+	</a>
+	<a href="son.html">
+		<h2 style="display:inline;">Son</h2>
+	</a>
+	<a href="../info.html">
+		<h2 style="display:inline;">Info+Contact</h2>
+	</a>
 	<hr size="3" color="#000000">
-
 
 	<a class="example-image-link" href="../images/mar.png" data-lightbox="example-set" data-title="rêves aqueux-liquid dreams">
 		<img class="example-image" src="../images/mar.png" alt="" />
@@ -41,23 +56,9 @@
 	</div>
 
 	<hr size="1" color="#000000">
-	<a href="../index.html">
-		<h2>Page Principal</h2>
-	</a>
-	<a href="video.html">
-		<h2>Video</h2>
-	</a>
-	<a href="animation.html">
-		<h2>Animation</h2>
-	</a>
-	<a href="son.html">
-		<h2>Son</h2>
-	</a>
-	<a href="../info.html">
-		<h2>Info+Contact</h2>
-	</a>
+	<h3>Photos, freeze, temps, Sable dans l'Air.
 
-	<script src="js/lightbox-plus-jquery.min.js"></script>
+		<script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 </html>
