Base Solid avant presentation
Version Simple Efficace

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<a href="projets/animation.html">
 		<h2 style="display:inline;">Animation</h2>
 	</a>
-	<a href="clicks/clicks.html">
+	<!--<a href="clicks/clicks.html">
 		<h2 style="display:inline;">MouvementClicks</h2>
-	</a>
+	</a>-->
 	<a href="projets/son.html">
 		<h2 style="display:inline;">Son</h2>
 	</a>
