--- a/info.html
+++ b/info.html
@@ -8,17 +8,33 @@
 </head>
 
 <body>
-	<h1><span><a href="index.html">Adrian Sevilla</a> | </span> Info+Contact</h1>
+	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Info</h1>
+	<a href="../index.html">
+		<h2 style="display:inline;">Menu</h2>
+	</a>
+	<a href="photo.html">
+		<h2 style="display:inline;">Photo</h2>
+	</a>
+	<a href="video.html">
+		<h2 style="display:inline;">Video</h2>
+	</a>
+	<a href="animation.html">
+		<h2 style="display:inline;">Animation</h2>
+	</a>
+	<a href="son.html">
+		<h2 style="display:inline;">Son</h2>
+	</a>
+	</h1>
 	<hr size="3" color="#000000">
 
 
 	<img src="images/cv.pdf" style="width:40%" align="top">
 
 
-	<img src="images/fot.jpg" style="width:20%" align="top">
+	<img src="images/fot.jpg" style="width:10%" align="top">
 
 
-
+	<!--no display in line
 	<hr size="1" color="#000000">
 
 	<a href="index.html">
@@ -36,6 +52,7 @@
 	<a href="projets/son.html">
 		<h2>Son</h2>
 	</a>
+-->
 </body>
 
 </html>
