--- a/projets/animation.html
+++ b/projets/animation.html
@@ -9,27 +9,27 @@
 
 <body>
 	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Animation</h1>
+	<a href="../index.html">
+		<h2 style="display:inline;">Menu</h2>
+	</a>
+	<a href="photo.html">
+		<h2 style="display:inline;">Photo</h2>
+	</a>
+	<a href="video.html">
+		<h2 style="display:inline;">Video</h2>
+	</a>
+	<a href="son.html">
+		<h2 style="display:inline;">Son</h2>
+	</a>
+	<a href="../info.html">
+		<h2 style="display:inline;">Info</h2>
+	</a>
+	</h1>
 	<hr size="3" color="#000000">
-	<h2>Humans, Coinçu, Animé et Sonorisé par: Adrian Sevilla </h2>
+	<h2>RoBeauT</h2>
 	<video class="center" controls>
 		<source src="../port/human.mp4" type="video/mp4">
 	</video>
-	<hr size="1" color="#000000">
-	<a href="../index.html">
-		<h2>Page Principal</h2>
-	</a>
-	<a href="photo.html">
-		<h2>Photo</h2>
-	</a>
-	<a href="video.html">
-		<h2>Video</h2>
-	</a>
-	<a href="son.html">
-		<h2>Son</h2>
-	</a>
-	<a href="../info.html">
-		<h2>Info+Contact</h2>
-	</a>
 
 
 </body>
