--- a/projets/photo.html
+++ b/projets/photo.html
@@ -12,7 +12,7 @@
 <body>
 	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Photo</h1>
 	<a href="../index.html">
-		<h2 style="display:inline;">Main</h2>
+		<h2 style="display:inline;">Menu</h2>
 	</a>
 	<a href="video.html">
 		<h2 style="display:inline;">Video</h2>
@@ -24,7 +24,7 @@
 		<h2 style="display:inline;">Son</h2>
 	</a>
 	<a href="../info.html">
-		<h2 style="display:inline;">Info+Contact</h2>
+		<h2 style="display:inline;">Info</h2>
 	</a>
 	<hr size="3" color="#000000">
 
@@ -55,10 +55,10 @@
 	</a>
 	</div>
 
-	<hr size="1" color="#000000">
-	<h3>Photos, freeze, temps, Sable dans l'Air.
+	<!--<hr size="1" color="#000000">
+	<h3>Photos, freeze, temps, Sable dans l'Air.-->
 
-		<script src="js/lightbox-plus-jquery.min.js"></script>
+	<script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 </html>
