--- a/projets/video.html
+++ b/projets/video.html
@@ -8,46 +8,37 @@
 </head>
 
 <body>
-	<h1>
-		<span>
-			<a href="../index.html">Adrian Sevilla</a> |
-		</span> Video
+	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Video</h1>
+	<a href="../index.html">
+		<h2 style="display:inline;">Menu</h2>
+	</a>
+	<a href="photo.html">
+		<h2 style="display:inline;">Photo</h2>
+	</a>
+	<a href="animation.html">
+		<h2 style="display:inline;">Animation</h2>
+	</a>
+	<a href="son.html">
+		<h2 style="display:inline;">Son</h2>
+	</a>
+	<a href="../info.html">
+		<h2 style="display:inline;">Info</h2>
+	</a>
 	</h1>
 	<hr size="3" color="#000000">
-	<h2> Racines_Roots_Raices_Wurzeln</h2>
+	<h2> Raiz</h2>
 	<video class="center" controls>
 		<source src="../port/vosque.mp4" type="video/mp4">
 	</video>
-	<h2> Cycles_Cycles_Ciclos_Zyklus</h2>
+	<h2> Zyklus</h2>
 	<video class="center" controls>
 		<source src="../port/pole.mp4" type="video/mp4">
 	</video>
-	<h2> Philosophal_Philosofal_Filosofal_</h2>
+	<h2> Filosofal</h2>
 	<video class="center" controls>
 		<source src="../port/filosofal.mp4" type="video/mp4">
 	</video>
 
-	<hr size="1" color="#000000">
-
-	<ul>
-		<li><a href="../index.html">
-				<h2>Page Principal</h2>
-			</a></li>
-		<li><a href="../clicks/clicks.html">
-				<h2>MouvementClicks</h2>
-			</a></li>
-		<li><a href="photo.html">
-				<h2>Photo</h2>
-			</a></li>
-		<li><a href="animation.html">
-			</a></li>
-		<li><a href="son.html">
-				<h2>Son</h2>
-			</a></li>
-		<li><a href="../info.html">
-				<h2>Info+Contact</h2>
-			</a></li>
-	</ul>
 
 </body>
 
