--- a/projets/son.html
+++ b/projets/son.html
@@ -9,32 +9,31 @@
 
 <body>
 	<h1><span><a href="../index.html">Adrian Sevilla</a> | </span> Son</h1>
+	<a href="../index.html">
+		<h2 style="display:inline;">Menu</h2>
+	</a>
+	<a href="photo.html">
+		<h2 style="display:inline;">Photo</h2>
+	</a>
+	<a href="video.html">
+		<h2 style="display:inline;">Video</h2>
+	</a>
+	<a href="Animation.html">
+		<h2 style="display:inline;">Animation</h2>
+	</a>
+	<a href="../info.html">
+		<h2 style="display:inline;">Info</h2>
+	</a>
+	</h1>
 	<hr size="3" color="#000000">
-	<h2>CaféNegro, Composé et produit par: Adrian Sevilla </h2>
-	<img src="../images/cafe.JPG" style="width:5%">
+	<h3>CaféNegro</h3>
+	<img src="../images/cafe.JPG" style="width:15%">
 	<audio controls>
 		<source src="../cafenegro.m4a" type="audio/mpeg">
 	</audio>
-	<hr size="1" color="#000000">
 
-	<a href="../index.html">
-		<h2>Page Principal</h2>
-	</a>
-	<a href="photo.html">
-		<h2>Photo</h2>
-	</a>
-	<a href="video.html">
-		<h2>Video</h2>
-	</a>
-	<a href="animation.html">
-		<h2>Animation</h2>
-	</a>
-	<a href="../info.html">
-		<h2>Info+Contact</h2>
-	</a>
-
-
-
+	<!--placer le reproducteur plus haut-->
+	<!--plus du contenu-->
 </body>
 
 </html>
